# common_utils

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.py
tests/: test_clean_text.py
util/: common_test.py  update_pyproject_toml.py
util/pylib/: util.py
